--- a/estilo/style.css
+++ b/estilo/style.css
@@ -96,12 +96,7 @@ body *{
     box-shadow:0px 10px 40px -12px #00ff8052
 }
 /*---------------------------------------------------------------------------*/
-@media only screen and (max-width:950px){
-    .card-login{
-        width: 85%;
-    }
-}
-@media only screen and (max-width:800px){
+@media(max-width:1000px){
     .main-login{
         flex-direction: column;
     }
